<resources>
    <string name="app_name">Nerf_War_App</string>
    <string name="user_login_page_login_button">Sign In</string>
    <string name="user_login_page_username_text">Username</string>
    <string name="user_login_page_password_text">Password</string>
    <string name="user_login_page_welcome_text">Welcome to Nerf War!</string>
    <string name="user_login_page_create_user_button">Create User</string>
    <string name="create_user_page_create_button">Create Account</string>
    <string name="create_user_page_name_text">Full Name</string>
    <string name="create_user_page_email_text">Email Address</string>
    <string name="create_user_page_password1_text">Password</string>
    <string name="create_user_page_password2_text">Confirm Password</string>
    <string name="create_user_page_title">Create New User!</string>

</resources>